src/k8s/oauth2-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: levizitting-ca
    traefik.ingress.kubernetes.io/router.middlewares: oauth2-proxy-oauth2-proxy-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.levizitting.com
      secretName: oauth2-proxy-tls
  rules:
    - host: auth.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
